update Planning noteboo

--- a/Planning.ipynb
+++ b/Planning.ipynb
@@ -92,6 +92,20 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sunday 8/11/19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Current models are classifying label 0 with high precision and accuracy but is essentially guessing on the 1-4 labels. Going to try to make classifications in two stages. In the first stage, the image will be classified as either a 0 or a 1-4. The zeros will be finished at this point, but the cnn features for the 1-4 labels will be passes to another model for classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
