--- a/instance_notebooks/transfer_learning_vgg16.ipynb
+++ b/instance_notebooks/transfer_learning_vgg16.ipynb
@@ -24,7 +24,6 @@
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "from keras.utils import to_categorical\n",
     "from keras.applications import VGG16\n",
-    "from keras.callbacks import EarlyStopping\n",
     "from keras.layers import Flatten, Dropout, Reshape, Dense, GlobalAveragePooling2D\n",
     "from keras.layers.convolutional import Conv2D, MaxPooling2D\n",
     "import itertools\n",
@@ -276,9 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
+     ]
+    }
+   ],
    "source": [
     "vgg_model = applications.VGG16(weights='imagenet',\n",
     "                               include_top=False,\n",
@@ -304,18 +313,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "_________________________________________________________________\n",
+      "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
+      "_________________________________________________________________\n",
+      "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
+      "_________________________________________________________________\n",
+      "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
+      "_________________________________________________________________\n",
+      "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
+      "_________________________________________________________________\n",
+      "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
+      "_________________________________________________________________\n",
+      "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
+      "_________________________________________________________________\n",
+      "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
+      "_________________________________________________________________\n",
+      "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 25088)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 512)               12845568  \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 256)               131328    \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 5)                 1285      \n",
+      "=================================================================\n",
+      "Total params: 27,692,869\n",
+      "Trainable params: 27,692,869\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "custom_model2.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 input_2 False\n",
+      "1 block1_conv1 True\n",
+      "2 block1_conv2 True\n",
+      "3 block1_pool True\n",
+      "4 block2_conv1 True\n",
+      "5 block2_conv2 True\n",
+      "6 block2_pool True\n",
+      "7 block3_conv1 True\n",
+      "8 block3_conv2 True\n",
+      "9 block3_conv3 True\n",
+      "10 block3_pool True\n",
+      "11 block4_conv1 True\n",
+      "12 block4_conv2 True\n",
+      "13 block4_conv3 True\n",
+      "14 block4_pool True\n",
+      "15 block5_conv1 True\n",
+      "16 block5_conv2 True\n",
+      "17 block5_conv3 True\n",
+      "18 block5_pool True\n",
+      "19 flatten_1 True\n",
+      "20 dense_1 True\n",
+      "21 dropout_1 True\n",
+      "22 dense_2 True\n",
+      "23 dense_3 True\n"
+     ]
+    }
+   ],
    "source": [
     "for i, layer in enumerate(custom_model2.layers):\n",
     "    print(i, layer.name, layer.trainable)"
@@ -323,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,9 +436,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 input_2 False\n",
+      "1 block1_conv1 False\n",
+      "2 block1_conv2 False\n",
+      "3 block1_pool False\n",
+      "4 block2_conv1 False\n",
+      "5 block2_conv2 False\n",
+      "6 block2_pool False\n",
+      "7 block3_conv1 False\n",
+      "8 block3_conv2 False\n",
+      "9 block3_conv3 False\n",
+      "10 block3_pool False\n",
+      "11 block4_conv1 False\n",
+      "12 block4_conv2 False\n",
+      "13 block4_conv3 False\n",
+      "14 block4_pool False\n",
+      "15 block5_conv1 False\n",
+      "16 block5_conv2 False\n",
+      "17 block5_conv3 False\n",
+      "18 block5_pool False\n",
+      "19 flatten_1 True\n",
+      "20 dense_1 True\n",
+      "21 dropout_1 True\n",
+      "22 dense_2 True\n",
+      "23 dense_3 True\n"
+     ]
+    }
+   ],
    "source": [
     "for i, layer in enumerate(custom_model2.layers):\n",
     "    print(i, layer.name, layer.trainable)"
@@ -838,9 +971,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -852,7 +985,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
