add first regression model

--- a/separate_1to4.ipynb
+++ b/separate_1to4.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,11 +160,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = KerasRegressor(build_fn=baseline_model, epochs=100, batch_size=5, verbose=0)"
+    "estimator = KerasRegressor(build_fn=baseline_model, epochs=100, batch_size=5, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      " - 197s - loss: 1.1928 - acc: 0.4495\n",
+      "Epoch 2/100\n",
+      " - 194s - loss: 1.0204 - acc: 0.4377\n",
+      "Epoch 3/100\n",
+      " - 190s - loss: 0.9507 - acc: 0.4865\n",
+      "Epoch 4/100\n",
+      " - 189s - loss: 1.0114 - acc: 0.4545\n",
+      "Epoch 5/100\n",
+      " - 190s - loss: 0.9470 - acc: 0.4697\n",
+      "Epoch 6/100\n",
+      " - 189s - loss: 0.9322 - acc: 0.4781\n",
+      "Epoch 7/100\n",
+      " - 196s - loss: 0.9701 - acc: 0.4747\n",
+      "Epoch 8/100\n",
+      " - 192s - loss: 0.9308 - acc: 0.4562\n",
+      "Epoch 9/100\n",
+      " - 210s - loss: 0.9704 - acc: 0.4865\n",
+      "Epoch 10/100\n",
+      " - 213s - loss: 0.9218 - acc: 0.4545\n",
+      "Epoch 11/100\n",
+      " - 219s - loss: 0.9174 - acc: 0.4680\n",
+      "Epoch 12/100\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed = 123\n",
+    "kfold = KFold(n_splits=2, random_state=seed)\n",
+    "results = cross_val_score(estimator, X_train, y_train, cv=kfold)\n",
+    "print(\"Results: %.2f (%.2f) MSE\" % (results.mean(), results.std()))"
    ]
   },
   {
@@ -172,11 +214,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "kfold = KFold(n_splits=10, random_state=seed)\n",
-    "results = cross_val_score(estimator, X, Y, cv=kfold)\n",
-    "print(\"Results: %.2f (%.2f) MSE\" % (results.mean(), results.std()))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
