add comments build function

--- a/separate_1to4.ipynb
+++ b/separate_1to4.ipynb
@@ -141,6 +141,11 @@
    "outputs": [],
    "source": [
     "def baseline_model():\n",
+    "    '''\n",
+    "    This is the build function that will be passed into KerasRegressor. Most of this model is based on\n",
+    "    the models in the cnn_increased_complexity notebook, but a mean_squared_error loss function is used and the\n",
+    "    final layer in the model is composed of only one neuron.\n",
+    "    '''\n",
     "    model = Sequential()\n",
     "    model.add(layers.Conv2D(224, (3, 3), activation='relu', input_shape=(224,224,3)))\n",
     "    model.add(layers.MaxPooling2D((2, 2)))\n",
@@ -198,7 +203,11 @@
       " - 213s - loss: 0.9218 - acc: 0.4545\n",
       "Epoch 11/100\n",
       " - 219s - loss: 0.9174 - acc: 0.4680\n",
-      "Epoch 12/100\n"
+      "Epoch 12/100\n",
+      " - 232s - loss: 0.9188 - acc: 0.4680\n",
+      "Epoch 13/100\n",
+      " - 204s - loss: 0.9191 - acc: 0.5051\n",
+      "Epoch 14/100\n"
      ]
     }
    ],
